chore(changelog): rename the main title

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -63,7 +63,7 @@
       "@semantic-release/changelog",
       {
         "changelogFile": "CHANGELOG.md",
-        "changelogTitle": "# Semantic Versioning Changelog"
+        "changelogTitle": "# Sonia stale action"
       }
     ],
     [
