docs(website): add a changelog page inside the docs
Closes #385

--- a/documentation/tsconfig.json
+++ b/documentation/tsconfig.json
@@ -15,6 +15,6 @@
     "rootDir": ".",
     "outDir": "lib"
   },
-  "include": ["src", "sidebars.js", "babel.config.js", "docusaurus.config.js"],
+  "include": ["src", "sidebars.js", "babel.config.js", "docusaurus.config.js", "scripts"],
   "exclude": ["**/__tests__/**/*", "src/client"]
 }
