--- a/.releaserc.json
+++ b/.releaserc.json
@@ -75,7 +75,7 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["package.json", "package-lock.json", "CHANGELOG.md"],
+        "assets": ["package.json", "package-lock.json", "CHANGELOG.md", "documentation/docs/11-changelog.md"],
         "message": "build(release): new version ${nextRelease.version}"
       }
     ],
