--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "pre-commit": "lint-staged",
     "commit-msg": "cross-env LOGGING_LEVEL=debug cz-customizable-ghooks",
     "post-commit": "git update-index --again",
-    "install-git-hooks": "husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks"
+    "install-git-hooks": "husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks",
+    "postversion": "node ./scripts/prepare-release.js"
   },
   "dependencies": {
     "@actions/core": "1.6.0",
@@ -117,6 +118,7 @@
     "@typescript-eslint/parser": "5.10.2",
     "@vercel/ncc": "0.33.1",
     "all-contributors-cli": "6.20.0",
+    "chalk": "4.1.2",
     "commitizen": "4.2.4",
     "concurrently": "7.0.0",
     "cross-env": "7.0.3",
@@ -140,6 +142,7 @@
     "jest-silent-reporter": "0.5.0",
     "jest-ts-auto-mock": "2.0.0",
     "lint-staged": "12.3.3",
+    "moment-timezone": "0.5.34",
     "node-notifier": "10.0.1",
     "prettier": "2.5.1",
     "rimraf": "3.0.2",
