--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+env:
+  NODE_VERSION: '14.17.6'
 jobs:
   CurrentTag:
     runs-on: ubuntu-latest
@@ -34,10 +36,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # renovate: tag=v2
-      - name: Use Node.js 12.22.9
+      - name: Use Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@1f8c6b94b26d0feae1e387ca63ccbdc44d27b561 # renovate: tag=v2
         with:
-          node-version: 12.22.9
+          node-version: ${{ env.NODE_VERSION }}
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -77,7 +79,7 @@ jobs:
       - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # renovate: tag=v2
       - uses: actions/setup-node@1f8c6b94b26d0feae1e387ca63ccbdc44d27b561 # renovate: tag=v2
         with:
-          node-version: 14.17.6
+          node-version: ${{ env.NODE_VERSION }}
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
