--- a/action.yml
+++ b/action.yml
@@ -76,6 +76,10 @@ inputs:
     description: 'Limit the quantity of API mutations calls performed during the processing of issues (-1 for unlimited).'
     required: false
     default: '-1'
+  issue-only-any-project-cards:
+    description: 'Only allow the processing of issues that contains one of those project cards (multiline).'
+    required: false
+    default: ''
   # Pull request inputs
   pull-request-stale-label:
     description: 'The label that will be added to the pull request when it is stale.'
