--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           fallback: 1.0.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SONIA_BOT_GH_TOKEN }}
       - name: Save current tag
         id: save-current-tag
         run: echo '::set-output name=CURRENT_TAG::${{ steps.current-tag.outputs.tag }}'
@@ -66,7 +66,7 @@ jobs:
       - name: Release
         run: npm run semver
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SONIA_BOT_GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GIT_AUTHOR_NAME: ${{ secrets.GIT_AUTHOR_NAME }}
           GIT_AUTHOR_EMAIL: ${{ secrets.GIT_AUTHOR_EMAIL }}
@@ -106,7 +106,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@068dc23d9710f1ba62e86896f84735d869951305 # renovate: tag=v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.SONIA_BOT_GH_TOKEN }}
           publish_dir: ./documentation/build
           user_name: ${{ secrets.GIT_COMMITTER_NAME }}
           user_email: ${{ secrets.GIT_COMMITTER_EMAIL }}
@@ -126,7 +126,7 @@ jobs:
         id: latest-tag
         uses: WyriHaximus/github-action-get-previous-tag@8a0e045f02c0a3a04e1452df58b90fc7e555e950 # renovate: tag=v1.1.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SONIA_BOT_GH_TOKEN }}
       - name: Show current tag
         run: echo 'The current tag is ${{ needs.CurrentTag.outputs.CURRENT_TAG }}'
       - name: Has same tag
@@ -139,7 +139,7 @@ jobs:
         if: needs.CurrentTag.outputs.CURRENT_TAG != steps.latest-tag.outputs.tag
         uses: peter-evans/create-pull-request@f22a7da129c901513876a2380e2dae9f8e145330 # renovate: tag=v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.SONIA_BOT_GH_TOKEN }}
           title: 'chore(develop): merge master into develop due to new version ${{ steps.latest-tag.outputs.tag }}'
           branch: feature/merge-master-into-develop
           assignees: C0ZEN
