--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -8,6 +8,6 @@ jobs:
     steps:
       - uses: actions/first-interaction@bd33205aa5c96838e10fd65df0d01efd613677c1 # renovate: tag=v1
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.SONIA_BOT_GH_TOKEN }}
           issue-message: 'Please, use the [issue template](ISSUE_TEMPLATE.md) to help you, and us, fix this issue.'
           pr-message: 'Please, use the [pull request template](PULL_REQUEST_TEMPLATE.md) to help you, and us, ship this wonderful feature. Remember, contributions to this repository should follow its [contributing guidelines](CONTRIBUTING.md) and [code of conduct](CODE_OF_CONDUCT.md) to ensure consistency over the quality.'
