docs: update @C0ZEN as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -28,7 +28,12 @@
         "review",
         "question",
         "maintenance",
-        "bug"
+        "bug",
+        "example",
+        "projectManagement",
+        "test",
+        "translation",
+        "tutorial"
       ]
     },
     {
