--- a/documentation/package.json
+++ b/documentation/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-translations:french": "npm run write-translations -- --locale fr",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "write-heading-ids:changelog": "docusaurus write-heading-ids . docs/11-changelog.md",
+    "write-heading-ids:changelog": "docusaurus write-heading-ids . docs/12-changelog.md",
     "typecheck": "tsc",
     "generate-files": "npm run generate-changelog",
     "generate-changelog": "node ./scripts/generate-changelog.js"
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.15",
+    "@docusaurus/plugin-ideal-image": "2.0.0-beta.15",
     "@docusaurus/preset-classic": "2.0.0-beta.15",
     "@docusaurus/theme-search-algolia": "2.0.0-beta.15",
     "@mdx-js/react": "1.6.22",
