--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -1,5 +1,5 @@
 C0ZEN:
   name: Geoffrey "C0ZEN" Testelin
-  title: Creator and maintainer of this Sonia GitHub stale action
+  title: Creator and maintainer of this Sonia stale action
   url: https://github.com/C0ZEN
   image_url: https://github.com/C0ZEN.png
