--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Process stale issues and PRs'
-description: 'A GitHub action to stale and close automatically your issues and pull requests.'
+description: 'An action to stale and close automatically your issues and pull requests'
 author: 'C0ZEN'
 inputs:
   # Common inputs
