feat(prs): add new input `pull-request-only-any-project-cards`
This new input allow to only process prs belonging to specific projects.
You can link your prs to a project card.
Pass as a multi-line input the names of your projects.
When this input is set, all prs without a project card will not be processed.
Closes #416

--- a/action.yml
+++ b/action.yml
@@ -157,6 +157,10 @@ inputs:
     description: 'Limit the quantity of API mutations calls performed during the processing of pull requests (-1 for unlimited).'
     required: false
     default: '-1'
+  pull-request-only-any-project-cards:
+    description: 'Only allow the processing of pull requests that contains one of those project cards (multiline).'
+    required: false
+    default: ''
 outputs:
   # Issues outputs
   processed-issues-count:
