chore(concurrently): use coloured scripts

--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "lint:other:this": "prettier --write --ignore-unknown",
     "lint:other:ci": "prettier --check --ignore-unknown **/*.{md,json,yml,html}",
     "lint:other:hook": "prettier --write --ignore-unknown --loglevel warn",
-    "lint:all": "npm run concurrently -- \"npm:lint:ts\" \"npm:lint:other\"",
-    "lint:all:ci": "npm run concurrently -- \"npm:lint:ts:ci\" \"npm:lint:other:ci\"",
+    "lint:all": "npm run concurrently -- \"npm:lint:ts\" \"npm:lint:other\" --prefix-colors cyan,red",
+    "lint:all:ci": "npm run concurrently -- \"npm:lint:ts:ci\" \"npm:lint:other:ci\" --prefix-colors cyan,red",
     "\n# UTILS SCRIPTS:": "",
     "cz": "git add . && git-cz && npm run git:push",
     "semver": "semantic-release",
