--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "eslint-plugin-progress": "0.0.1",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
     "faker": "5.5.3",
+    "gnomon": "1.5.0",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "jest-extended": "2.0.0",
