--- a/package.json
+++ b/package.json
@@ -59,15 +59,18 @@
     "build": "npm run clean:dist && ncc build --license licenses.txt --minify",
     "build:dirty": "ncc build src/main.ts --license licenses.txt --minify",
     "\n# TEST SCRIPTS:": "",
-    "test": "jest",
-    "test:watch": "jest --watch-all",
-    "test:watch:no-cache": "jest --watch-all --no-cache",
-    "test:leaks": "jest --detect-leaks",
-    "test:ci": "jest --bail=1 --ci --runInBand --silent",
-    "test:ci:coverage": "npm run test:ci -- --collect-coverage",
-    "test:ci:coverage:integration:issues": "npm run test:ci:coverage -- tests/issues",
-    "test:ci:coverage:integration:pull-requests": "npm run test:ci:coverage -- tests/pull-requests",
-    "test:ci:coverage:unit": "npm run test:ci:coverage -- src",
+    "test": "jest --selectProjects unit integration-issues integration-pull-requests",
+    "test:integration:issues": "jest --selectProjects integration-issues",
+    "test:integration:pull-requests": "jest --selectProjects integration-pull-requests",
+    "test:unit": "jest --selectProjects unit",
+    "test:watch": "jest --watch-all --selectProjects unit integration-issues integration-pull-requests",
+    "test:watch:no-cache": "jest --watch-all --no-cache --selectProjects unit integration-issues integration-pull-requests",
+    "test:leaks": "jest --detect-leaks --selectProjects unit integration-issues integration-pull-requests",
+    "test:ci": "jest --bail=1 --ci --maxWorkers 2 --silent --selectProjects unit-ci integration-issues-ci integration-pull-requests-ci",
+    "test:ci:coverage": "jest --bail=1 --ci --maxWorkers 2 --silent --collect-coverage --selectProjects unit-ci integration-issues-ci integration-pull-requests-ci",
+    "test:ci:coverage:integration:issues": "jest --bail=1 --ci --maxWorkers 2 --silent --collect-coverage --selectProjects integration-issues-ci",
+    "test:ci:coverage:integration:pull-requests": "jest --bail=1 --ci --maxWorkers 2 --silent --collect-coverage --selectProjects integration-pull-requests-ci",
+    "test:ci:coverage:unit": "jest --bail=1 --ci --maxWorkers 2 --silent --collect-coverage --selectProjects unit-ci",
     "test:clear-cache": "jest --clear-cache",
     "\n# LINT SCRIPTS:": "",
     "lint:ts": "eslint --fix --fix-type suggestion,layout,problem --cache --cache-location .eslintcache --quiet **/*.{js,ts}",
