refactor(outputs): use a mapper to log the issues outputs
Closes #487

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -220,6 +220,10 @@ rules:
         - PascalCase
       prefix:
         - E
+    - selector: objectLiteralMethod
+      format:
+        - camelCase
+        - UPPER_CASE
   '@typescript-eslint/no-explicit-any':
     - error
     - fixToUnknown: false
