--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -320,7 +320,15 @@ rules:
       ignoreReadBeforeAssign: false
   camelcase: off
   valid-jsdoc: off
-  'jsdoc/require-jsdoc': warn # @todo change it to error but we should fix all current jsdoc errors
+  'jsdoc/require-jsdoc': error
+  'jsdoc/require-param-description': error
+  'jsdoc/require-returns-description': error
+  'jsdoc/no-undefined-types':
+    - error
+    - definedTypes:
+        - unknown
+  'jsdoc/require-param-type': error
+  'jsdoc/require-returns-type': error
   curly:
     - error
     - all
