build(stale): change the name of the stale label
When emojis were added to all labels, the configuration was not changed for the stale action.
Now, the stale tester is failing because an issue should be stale.
But the stale label could not be found in this repository.

--- a/.github/workflows/stale-tester.yml
+++ b/.github/workflows/stale-tester.yml
@@ -18,3 +18,5 @@ jobs:
         uses: ./
         with:
           dry-run: true
+          issue-stale-label: 'stale :cold_face:'
+          pull-request-stale-label: 'stale :cold_face:'
