--- a/action.yml
+++ b/action.yml
@@ -88,6 +88,10 @@ inputs:
     description: 'Only allow the processing of issues that contains one of those milestones (multiline).'
     required: false
     default: ''
+  issue-ignore-all-milestones:
+    description: 'Allow to ignore the processing of issues that contains any milestones.'
+    required: false
+    default: 'false'
   # Pull request inputs
   pull-request-stale-label:
     description: 'The label that will be added to the pull request when it is stale.'
