--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,17 +43,17 @@
     "jsx": "react",
     "strictFunctionTypes": true,
     "strictBindCallApply": true,
-    "forceConsistentCasingInFileNames": true,
-    "references": [
-      {
-        "path": "./tsconfig.app.json"
-      },
-      {
-        "path": "./tsconfig.spec.json"
-      },
-      {
-        "path": "./documentation/tsconfig.json"
-      }
-    ]
-  }
+    "forceConsistentCasingInFileNames": true
+  },
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./documentation/tsconfig.json"
+    }
+  ]
 }
