--- a/action.yml
+++ b/action.yml
@@ -88,6 +88,10 @@ inputs:
     description: 'Only allow the processing of issues that contains one of those milestones (multiline).'
     required: false
     default: ''
+  issue-ignore-any-milestones:
+    description: 'Allow to ignore the processing of issues that contains one of those milestones (multiline).'
+    required: false
+    default: ''
   issue-ignore-all-milestones:
     description: 'Allow to ignore the processing of issues that contains any milestones.'
     required: false
@@ -179,6 +183,10 @@ inputs:
     default: ''
   pull-request-only-any-milestones:
     description: 'Only allow the processing of pull requests that contains one of those milestones (multiline).'
+    required: false
+    default: ''
+  pull-request-ignore-any-milestones:
+    description: 'Allow to ignore the processing of pull requests that contains one of those milestones (multiline).'
     required: false
     default: ''
 outputs:
