feat(prs): add new input to ignore all milestones
Add the `pull-request-ignore-all-milestones` input.
If a pull request has a milestone, it will be ignored from the processing.
Closes #520

--- a/action.yml
+++ b/action.yml
@@ -189,6 +189,10 @@ inputs:
     description: 'Allow to ignore the processing of pull requests that contains one of those milestones (multiline).'
     required: false
     default: ''
+  pull-request-ignore-all-milestones:
+    description: 'Allow to ignore the processing of pull requests that contains any milestones.'
+    required: false
+    default: 'false'
 outputs:
   # Issues outputs
   processed-issues-count:
