chore(jest): migrate to jest 28

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "types": [],
     "allowJs": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
