--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "husky": "8.0.1",
     "jest": "28.1.3",
     "jest-extended": "3.0.2",
+    "jest-mock": "28.1.3",
     "jest-silent-reporter": "0.5.0",
     "jest-ts-auto-mock": "2.1.0",
     "lint-staged": "13.0.3",
