--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/app",
-    "types": ["node"]
+    "types": ["jest", "node"]
   },
   "include": ["src", "scripts"],
   "exclude": ["**.*.spec.ts", "jest", "**/__mocks__"]
