feat(prs): add new input `pull-request-only-with-assignees`
This new input allows to only process pull requests containing at least one assignee.
Closes #313

--- a/action.yml
+++ b/action.yml
@@ -205,6 +205,10 @@ inputs:
     description: 'Only allow the processing of pull requests that contains one of those assignees (multiline).'
     required: false
     default: ''
+  pull-request-only-with-assignees:
+    description: 'Only allow the processing of pull requests that contains at least one assignee.'
+    required: false
+    default: 'false'
 outputs:
   # Issues outputs
   processed-issues-count:
